feat: set default assets folder to standard Canvus installation path
- Updated default assets folder to C:\ProgramData\MultiTaction\canvus\assets
- This covers 99% of standard Canvus installations on Windows
- Updated config-sample.yaml with the new default path
- Updated TESTING.md documentation to reflect the default
- Rebuilt Windows executable with updated defaults

This makes the tool much more user-friendly for typical deployments.

--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -10,7 +10,7 @@ canvus_server:
 
 # File System Paths
 paths:
-  assets_folder: "C:\\path\\to\\canvus\\assets\\folder"
+  assets_folder: "C:\\ProgramData\\MultiTaction\\canvus\\assets"  # Default Canvus installation path
   backup_root_folder: "C:\\path\\to\\backup\\root\\folder"
   output_folder: "./output"
 
