feat: add support for self-signed TLS certificates
- Added WithInsecureTLS() option to Canvus SDK for self-signed certificates
- Added insecure_tls configuration option (defaults to true)
- Updated discovery command to use TLS configuration setting
- Updated sample config and documentation with TLS settings
- Rebuilt Windows executable with TLS support

This resolves the 'certificate signed by unknown authority' error
for Canvus servers with self-signed certificates while still
supporting production servers with valid certificates.

--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -7,6 +7,7 @@ canvus_server:
   username: "your_username_here"
   password: "your_password_here"
   timeout: 30  # seconds
+  insecure_tls: true  # Set to false for production with valid certificates
 
 # File System Paths
 paths:
