feat: add default backup location for Canvus installations
- Set default backup root folder to C:\ProgramData\MultiTaction\canvus\backups
- Updated preserveDefaults() method to maintain backup folder default
- Updated config-sample.yaml with new default backup path
- Updated TESTING.md documentation with new default path
- Rebuilt Windows executable with updated defaults

This provides a sensible default for the most common Canvus
installation backup location, reducing user configuration needed.

--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -12,7 +12,7 @@ canvus_server:
 # File System Paths
 paths:
   assets_folder: "C:\\ProgramData\\MultiTaction\\canvus\\assets"  # Default Canvus installation path
-  backup_root_folder: "C:\\path\\to\\backup\\root\\folder"
+  backup_root_folder: "C:\\ProgramData\\MultiTaction\\canvus\\backups"  # Default Canvus backup path
   output_folder: "./output"
 
 # Logging Configuration
