feat: implement comprehensive logging system with verbose mode
- Added complete logging system with configurable levels (DEBUG, INFO, WARN, ERROR)
- Implemented verbose mode to show detailed API responses and widget processing
- Added log file support with automatic directory creation
- Updated discovery command to use structured logging throughout
- Added verbose logging for:
  - Canvas processing and widget enumeration
  - Individual widget API calls (GetImage, GetPDF, GetVideo)
  - Hash extraction and asset identification
  - Filesystem scanning and missing asset detection
- Enabled verbose mode and log file by default in configuration
- Updated sample config to show verbose logging options
- Rebuilt Windows executable with logging support

Verbose mode now shows:
- Detailed widget responses from get widgets command
- Individual widget processing steps
- Hash extraction details
- Asset identification process
- Canvas-by-canvas processing information

Log files are created in the current directory as 'kpmg-db-solver.log'

--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -18,8 +18,8 @@ paths:
 # Logging Configuration
 logging:
   level: "info"        # debug, info, warn, error
-  verbose: false
-  log_to_file: false
+  verbose: true        # Enable verbose mode to see detailed API responses
+  log_to_file: true    # Enable logging to file
   log_file: "kpmg-db-solver.log"
 
 # Performance Settings
