feat: create non-admin version for asset discovery and reporting
- Remove asset restoration functionality that requires admin privileges
- Update configuration to use user-accessible output paths
- Enhance reporting with detailed backup location information
- Update command structure to focus on discovery and reporting only
- Modify README to reflect non-admin capabilities and limitations
- Build successful non-admin executable: kpmg-db-solver-nonadmin

Key changes:
- Removed restore command and restoration prompts
- Changed output folder from ./output to ./reports
- Enhanced CSV and text reports with backup file details
- Updated help text to clarify read-only nature
- Maintained all discovery and backup search functionality

--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -9,11 +9,11 @@ canvus_server:
   timeout: 30  # seconds
   insecure_tls: true  # Set to false for production with valid certificates
 
-# File System Paths
+# File System Paths (Non-Admin Version - Read-Only Access)
 paths:
-  assets_folder: "C:\\ProgramData\\MultiTaction\\canvus\\assets"  # Default Canvus installation path
-  backup_root_folder: "C:\\ProgramData\\MultiTaction\\canvus\\backups"  # Default Canvus backup path
-  output_folder: "./output"
+  assets_folder: "C:\\ProgramData\\MultiTaction\\canvus\\assets"  # Read-only access for discovery
+  backup_root_folder: "C:\\ProgramData\\MultiTaction\\canvus\\backups"  # Read-only access for discovery
+  output_folder: "./reports"  # User-accessible output folder
 
 # Logging Configuration
 logging:
